# sur-bench

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: benchmark.rs  docker.rs  main.rs  postgres.rs  surrealdb.rs
