[package]
name = "sur-bench"
edition = "2021"
version = "0.0.1"
license = "Apache-2.0"
readme = "README.md"

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
tracing = "0.1.40"
serde_json = "1.0.114"
rayon = "1.9.0"
parking_lot = "0.12.1"
postgres = "0.19.7"
rand = { version = "0.8.5", features = ["small_rng"] }
surrealdb = "1.2.0"
serde = { version = "1.0.197", features = ["derive"] }