[package]
name = "sur-bench"
edition = "2021"
version = "0.0.1"
license = "Apache-2.0"
readme = "README.md"

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.1", features = ["derive"] }
env_logger = "0.11.2"
log = "0.4.21"
rand = { version = "0.8.5", features = ["small_rng"] }
rayon = "1.9.0"
serde = { version = "1.0.197", features = ["derive"] }
surrealdb = "1.2.0"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
tokio-postgres = "0.7.10"
